[project]
name = "comfyui-hidiffusion"
description = "Simple custom nodes for testing and use HiDiffusion technology: https://github.com/megvii-research/HiDiffusion/"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/florestefano1975/ComfyUI-HiDiffusion"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-HiDiffusion"
Icon = ""
